[gd_scene load_steps=5 format=3 uid="uid://b7tvm6v26tsk3"]

[ext_resource type="Script" path="res://Player.gd" id="1"]

[sub_resource type="Animation" id="1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0.5)]
}

[sub_resource type="Animation" id="2"]
resource_name = "Step"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0.5), Vector3(0.02, 1.02, 0.5), Vector3(0, 1, 0.5), Vector3(-0.02, 1.02, 0.5), Vector3(0, 1, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v0tf7"]
_data = {
"RESET": SubResource("1"),
"Step": SubResource("2")
}

[node name="Player" type="Node3D"]
script = ExtResource("1")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 1, 0.5)

[node name="Light" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
light_color = Color(1, 0.996078, 0.835294, 1)
light_energy = 0.795
shadow_enabled = true
omni_range = 7.66
omni_attenuation = 1.56917

[node name="Tween" type="Tween" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
script = null

[node name="RayForward" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayBack" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayRight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayLeft" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="SpotLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
light_color = Color(1, 0.956863, 0.835294, 1)
light_energy = 2.0
spot_attenuation = 2.37841
spot_angle = 64.36
spot_angle_attenuation = 3.03143

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v0tf7")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
